# my_robot_sim

./: .gitignore  README.md  README1.md  readme.txt  tutorial_camera_nav2.md  tutorial_sim_nav2.md
my_robot_sim/: CMakeLists.txt  package.xml
my_robot_sim/config/: nav2_params.yaml
my_robot_sim/launch/: nav2_launch.py  sim_launch.py  slam_launch.py
my_robot_sim/rviz/: nav2_sim.rviz
my_robot_sim/scripts/: go_to_goal.py
my_robot_sim/urdf/: robot.urdf.xacro
my_robot_sim/worlds/: arena.world
